--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -10,9 +10,9 @@
 // @use 'components/card-project';
 
 // @use 'layout/footer';
-// @use 'layout/header';
+@use 'layout/header';
 // @use 'layout/grid';
-// @use 'layout/mobile-nav';
-// @use 'layout/navigation';
+@use 'layout/mobile-nav';
+@use 'layout/navigation';
 
 // @use 'pages/home';
