--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 *,
 *::after,
 *::before {
@@ -430,4 +431,140 @@ template {
  */
 [hidden] {
   display: none;
+}
+
+.header {
+  background-color: #ECDFD0;
+  color: #2D332E;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1.25rem;
+}
+
+.logo {
+  width: 18vw;
+  min-width: 100px;
+  max-width: 125px;
+}
+
+.mobile-nav {
+  position: relative;
+}
+.mobile-nav__icon {
+  align-self: first baseline;
+  width: 40px;
+  z-index: 2000;
+  padding-top: 10px;
+}
+.mobile-nav__icon-close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 3000;
+  opacity: 0;
+  width: 0;
+}
+.mobile-nav__checkbox {
+  display: none;
+}
+.mobile-nav__nav {
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  right: 0;
+  background-color: #ECDFD0;
+  background-size: 100%;
+  z-index: 2000;
+  opacity: 0;
+  width: 0;
+}
+.mobile-nav__list {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  list-style: none;
+  text-align: center;
+  padding-left: 0;
+}
+.mobile-nav__item {
+  padding: 0.5rem;
+}
+.mobile-nav__link {
+  color: #2D332E;
+  font-family: "Cormorant Garamond", serif;
+  font-size: 1rem;
+  text-transform: uppercase;
+  padding: 1rem 0.5rem 0.5rem 0.5rem;
+  cursor: pointer;
+  border-bottom: 1px solid #2D332E;
+}
+.mobile-nav__link:hover, .mobile-nav__link:active {
+  border-bottom: 1px solid #2D332E;
+}
+.mobile-nav__checkbox:checked ~ .mobile-nav__nav {
+  opacity: 1;
+  width: 100%;
+}
+.mobile-nav__checkbox:checked ~ .mobile-nav__icon-close {
+  opacity: 1;
+  width: 100%;
+}
+@media screen and (min-width: 1130px) {
+  .mobile-nav {
+    display: none;
+  }
+}
+
+.navigation {
+  display: none;
+}
+@media screen and (min-width: 1130px) {
+  .navigation {
+    display: block;
+  }
+}
+.navigation__list {
+  text-decoration: none;
+  list-style: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
+}
+.navigation__item {
+  margin: 0 10px;
+  padding: 5px;
+  position: relative;
+  overflow: hidden;
+}
+.navigation__item::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background-color: #454E47;
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: transform 0.3s ease-in-out;
+}
+.navigation__item.active::before { /* Styl pro aktivní stav */
+  transform: scaleX(1);
+}
+.navigation__item:hover::before {
+  transform: scaleX(1);
+}
+.navigation__link {
+  color: #2D332E;
+  font-family: "Cormorant Garamond", serif;
+  font-size: 1rem;
+  text-transform: uppercase;
+  padding: 5px;
+}
+
+.active::before { /* Styl pro aktivní stav */
+  transform: scaleX(1);
 }/*# sourceMappingURL=style.css.map */
