Add Hero Section

--- a/SCSS/base/_typography.scss
+++ b/SCSS/base/_typography.scss
@@ -9,7 +9,7 @@ body {
     line-height: 2rem;
 }
 
-h1, h2, h3, h4 {
+h1, h2, h3, h4, h5, h6 {
     font-family: v.$font-special;
 }
 
@@ -17,21 +17,14 @@ a {
     text-decoration: none;
 }
 
-.heading-primary {
-    font-size: clamp(2.75rem, 8vw, 4.5rem);
-    text-transform: uppercase;
-    font-weight: 400;
-}
 
-.heading-secondary {
+.heading-primary {
     font-size: clamp(2.25rem, 6vw, 4rem);
-    text-transform: uppercase;
     font-weight: 400;
 }
 
 .heading-tertiary {
     font-size: clamp(1.8rem, 4vw, 2.75rem);
-    text-transform: uppercase;
     font-weight: 400;
 }
 
