--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ html {
 
 body {
   box-sizing: border-box;
-  color: #FAF8F5;
+  color: #F2EDE7;
 }
 
 body {
@@ -105,14 +105,19 @@ a {
 }
 
 .u-background {
-  background-color: #000;
-  width: 100vw;
+  background-color: #F2EDE7;
 }
-.u-background--color-tertiary {
-  background-color: #000;
+.u-background--color-primary-400 {
+  background-color: #ECDFD0;
 }
-.u-background--color-quartiary {
-  background-color: #000;
+.u-background--color-primary-500 {
+  background-color: #E0CEBA;
+}
+.u-background--color-primary-600 {
+  background-color: #D5BDA3;
+}
+.u-background--color-primary-700 {
+  background-color: #A69384;
 }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
@@ -443,8 +448,29 @@ template {
   border: 1px solid #A69384;
 }
 
+.card-action {
+  background-color: #F2EDE7;
+  padding: 20px;
+}
+.card-action__link-grid {
+  display: grid;
+  palce-content: center;
+}
+.card-action__img {
+  place-content: center;
+}
+.card-action__link {
+  font-family: "Cormorant Garamond", serif;
+  font-size: 1.5rem;
+  color: #2D332E;
+  text-align: center;
+}
+
 .header {
   background-color: #ECDFD0;
+  width: 100%;
+}
+.header__wrapp {
   color: #2D332E;
   font-weight: 500;
   display: flex;
@@ -458,6 +484,42 @@ template {
   width: 18vw;
   min-width: 100px;
   max-width: 125px;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 1.8rem;
+  justify-content: center;
+  margin: 0 auto;
+}
+@media screen and (min-width: 750px) {
+  .grid {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media screen and (min-width: 1100px) {
+  .grid {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+.grid-img {
+  display: grid;
+  grid-template-columns: 333px;
+  gap: 1.8rem;
+  justify-content: center;
+  margin: 0 auto;
+}
+@media screen and (min-width: 750px) {
+  .grid-img {
+    grid-template-columns: 328px 328px;
+  }
+}
+@media screen and (min-width: 1100px) {
+  .grid-img {
+    grid-template-columns: 328px 328px 328px;
+  }
 }
 
 .mobile-nav {
@@ -584,12 +646,12 @@ template {
 .section-hero {
   color: #454E47;
   padding: 1.25rem;
-  padding-top: 10rem;
+  padding-top: 2rem;
   height: 90vh;
-  min-height: 300px;
+  min-height: 650px;
   max-height: 700px;
   margin: 0 auto;
-  max-width: 1400px;
+  max-width: 1200px;
   display: flex;
   flex-direction: column;
   gap: 2.5rem;
@@ -597,46 +659,82 @@ template {
 .section-hero__content {
   flex: 2;
 }
+@media screen and (min-width: 1040px) {
+  .section-hero__content {
+    height: 50vh;
+    padding-top: 8rem;
+  }
+}
 .section-hero__images {
   flex: 3;
   position: relative;
 }
+@media screen and (min-width: 1040px) {
+  .section-hero__images {
+    height: 50vh;
+  }
+}
 .section-hero__img-wrapp {
-  height: 200px;
-  width: 200px;
-  background-image: url(/images/IMG_20230517_165906.jpg);
   background-size: cover;
   -webkit-clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
           clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
   background-repeat: no-repeat;
 }
 .section-hero__img-wrapp--1 {
-  height: 275px;
-  width: 275px;
+  height: 170px;
+  width: 170px;
   background-image: url(/images/IMG_20230517_165906.jpg);
   position: absolute;
-  bottom: 351px;
-  right: 453px;
+  bottom: 218px;
+  right: 236px;
+}
+@media screen and (min-width: 1040px) {
+  .section-hero__img-wrapp--1 {
+    height: 175px;
+    width: 175px;
+    position: absolute;
+    bottom: 105px;
+    right: 370px;
+  }
 }
 .section-hero__img-wrapp--2 {
-  height: 360px;
-  width: 360px;
+  height: 200px;
+  width: 200px;
   margin-left: 45px;
   background-image: url(/images/IMG_20230517_165920.jpg);
   position: absolute;
-  bottom: -63px;
-  right: 425px;
+  bottom: 0px;
+  right: 228px;
+}
+@media screen and (min-width: 1040px) {
+  .section-hero__img-wrapp--2 {
+    height: 260px;
+    width: 260px;
+    position: absolute;
+    bottom: -185px;
+    right: 347px;
+  }
 }
 .section-hero__img-wrapp--3 {
-  height: 550px;
-  width: 550px;
+  height: 320px;
+  width: 320px;
   background-image: url(/images/IMG_20230517_170002.jpg);
   position: absolute;
-  right: -50px;
+  right: -56px;
   bottom: 50px;
 }
-@media screen and (min-width: 750px) {
+@media screen and (min-width: 1040px) {
+  .section-hero__img-wrapp--3 {
+    height: 450px;
+    width: 450px;
+    position: absolute;
+    right: -50px;
+    bottom: -130px;
+  }
+}
+@media screen and (min-width: 1040px) {
   .section-hero {
     flex-direction: row;
+    height: 100vw;
   }
 }/*# sourceMappingURL=style.css.map */
