--- a/SCSS/base/_typography.scss
+++ b/SCSS/base/_typography.scss
@@ -23,8 +23,8 @@ a {
     font-weight: 400;
 }
 
-.heading-tertiary {
-    font-size: clamp(1.8rem, 4vw, 2.75rem);
+.heading-secondary {
+    font-size: clamp(2rem, 4vw, 3rem);
     font-weight: 400;
 }
 
