--- a/SCSS/components/_card-action.scss
+++ b/SCSS/components/_card-action.scss
@@ -4,6 +4,7 @@
 
 .card-action {
     background-color: v.$color-primary-200;
+    color: v.$color-grey-900;
     padding: 20px;
 
     &__link-grid {
@@ -12,6 +13,13 @@
 
     &__img {
         place-content: center;
+        display: block;
+        width: 100%;
+    }
+
+    &__p {
+        text-align: center;
+        margin-bottom: 0;
     }
 
     &__link {
@@ -19,5 +27,10 @@
         font-size: 1.5rem;
         color: v.$color-grey-900;
         text-align: center;
+        margin: 0 auto;
+
+        &:hover {
+            border-bottom: 1px solid v.$color-grey-900;
+        }
     }
 }
