--- a/SCSS/components/_card-action.scss
+++ b/SCSS/components/_card-action.scss
@@ -7,6 +7,10 @@
     color: v.$color-grey-900;
     padding: 20px;
 
+    &:hover {
+        transform: scale(1.1);
+    }
+
     &__link-grid {
         @include mx.grid-center;
     }
