--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -8,6 +8,8 @@
 
 @use 'components/buttons';
 @use 'components/card-action';
+@use 'components/columns';
+
 
 // @use 'layout/footer';
 @use 'layout/header';
