--- a/SCSS/base/_typography.scss
+++ b/SCSS/base/_typography.scss
@@ -11,6 +11,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
     font-family: v.$font-special;
+    line-height: 1.2;
 }
 
 a {
@@ -19,18 +20,24 @@ a {
 
 
 .heading-primary {
-    font-size: clamp(2.25rem, 6vw, 4rem);
+    font-size: clamp(2.25rem, 8vw, 4rem);
     font-weight: 400;
 }
 
 .heading-secondary {
-    font-size: clamp(2rem, 4vw, 3rem);
+    font-size: clamp(2rem, 6vw, 3rem);
+    font-weight: 400;
+}
+
+.heading-tertiary {
+    font-size: clamp(1.5rem, 5vw, 2.25rem);
     font-weight: 400;
 }
 
 
 .paragraph {
-    font-size: clamp(1rem, 3vw, 1.3rem);
+    font-size: clamp(1rem, 3vw, 1.1rem);
+    font-weight: 300;
     line-height: 2;
 
     &:not(:last-child) {
