--- a/SCSS/base/_utilities.scss
+++ b/SCSS/base/_utilities.scss
@@ -6,6 +6,9 @@
     margin: 0 auto;
 }
 
+.u-margin-top-0 {margin-top: 0;}
+.u-margin-top-small {margin-top: 2rem !important;}
+.u-margin-top-medium {margin-top: 4rem !important;}
 .u-margin-bottom-small {margin-bottom: 1.5rem !important;}
 .u-margin-bottom-medium {margin-bottom: 4rem !important;}
 .u-margin-bottom-big {margin-bottom: 8rem !important;}
@@ -47,5 +50,21 @@
 
     &--color-primary-700 {
         background-color: v.$color-primary-700;
+    }
+}
+
+.u-responzive-img {
+    
+    &__wrapp {
+        background-color: v.$color-white;
+        padding: v.$spacer;
+        flex: 1;
+        display: grid;
+        place-content: center;
+        object-fit: cover;
+    }
+
+    &__img {
+        width: 100%;
     }
 }
