--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -11,7 +11,7 @@
 @use 'components/columns';
 
 
-// @use 'layout/footer';
+@use 'layout/footer';
 @use 'layout/header';
 @use 'layout/grids';
 @use 'layout/mobile-nav';
