--- a/SCSS/layout/_navigation.scss
+++ b/SCSS/layout/_navigation.scss
@@ -5,6 +5,7 @@
 
 .navigation {
     display: none;
+    font-family: v.$font-special;
 
     @include mx.media-min(1140px) {
         display: block;
@@ -81,7 +82,7 @@
 
     &__submenu-link {
         color: v.$color-grey-900;
-        font-size: 1rem;
+        font-size: 1.2rem;
         padding: 10px 5px;
         font-weight: 500;
 
