--- a/css/style.css
+++ b/css/style.css
@@ -528,6 +528,29 @@ template {
   gap: 5rem;
 }
 
+.footer {
+  color: #2D332E;
+  font-family: "Cormorant Garamond", serif;
+}
+.footer__conteiner {
+  padding: clamp(1.25rem, 8vw, 2.5rem);
+  display: grid;
+  grid-template-columns: 200px 1fr 1fr 1fr 1fr;
+  gap: 2.5rem;
+}
+.footer__link {
+  color: #2D332E;
+  text-transform: uppercase;
+}
+.footer__submenu {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.footer__submenu-link {
+  color: #2D332E;
+}
+
 .header {
   background-color: #ECDFD0;
   width: 100%;
@@ -659,6 +682,7 @@ template {
 
 .navigation {
   display: none;
+  font-family: "Cormorant Garamond", serif;
 }
 @media screen and (min-width: 1140px) {
   .navigation {
@@ -725,7 +749,7 @@ template {
 }
 .navigation__submenu-link {
   color: #2D332E;
-  font-size: 1rem;
+  font-size: 1.2rem;
   padding: 10px 5px;
   font-weight: 500;
 }
@@ -913,6 +937,11 @@ template {
 @media screen and (min-width: 1000px) {
   .section-gift__content {
     max-width: 40vw;
+  }
+}
+@media screen and (min-width: 1300px) {
+  .section-gift__content {
+    max-width: 30vw;
   }
 }
 .section-gift__qr {
