--- a/SCSS/layout/_navigation.scss
+++ b/SCSS/layout/_navigation.scss
@@ -83,7 +83,7 @@
     &__submenu-link {
         color: v.$color-grey-900;
         font-size: 1.2rem;
-        padding: 10px 5px;
+        padding: 10px 5px 10px 5px;
         font-weight: 500;
 
         &:hover {
